Practica02/Practica02/obj/Debug/SICParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\a_k_n\Documents\Programas\Programacion de sistemas\Programacion-de-Sistemas\Practica02\Practica02\SIC.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Practica02 {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class SICParser : Parser {
	public const int
		INIT=1, ACABA=2, DIRBYTE=3, OPERANDBYTE=4, DIRECTIVA=5, EXEP=6, INSTRUCCION=7, 
		OPERANDO=8, ETIQUETA=9, ENTER=10, QUOTE=11, WS=12;
	public const int
		RULE_go = 0, RULE_inicio = 1, RULE_fin = 2, RULE_expr = 3, RULE_checarOpbyte = 4, 
		RULE_checarByte = 5, RULE_checarRsub = 6, RULE_checarOp = 7, RULE_checarDirec = 8, 
		RULE_checarEtiq = 9, RULE_checarInstru = 10, RULE_compileUnit = 11;
	public static readonly string[] ruleNames = {
		"go", "inicio", "fin", "expr", "checarOpbyte", "checarByte", "checarRsub", 
		"checarOp", "checarDirec", "checarEtiq", "checarInstru", "compileUnit"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, "'\n'", "'''"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INIT", "ACABA", "DIRBYTE", "OPERANDBYTE", "DIRECTIVA", "EXEP", 
		"INSTRUCCION", "OPERANDO", "ETIQUETA", "ENTER", "QUOTE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SIC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


		int i=1;
		string ruta = "";
		
	public SICParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class GoContext : ParserRuleContext {
		public string val;
		public InicioContext inicio() {
			return GetRuleContext<InicioContext>(0);
		}
		public FinContext fin() {
			return GetRuleContext<FinContext>(0);
		}
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public GoContext(ParserRuleContext parent, int invokingState) : base(parent, invokingState) { }
		public GoContext(ParserRuleContext parent, int invokingState, string val)
			: base(parent, invokingState)
		{
			this.val = val;
		}
		public override int RuleIndex { get { return RULE_go; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterGo(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitGo(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGo(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GoContext go(string val) {
		GoContext _localctx = new GoContext(_ctx, State, val);
		EnterRule(_localctx, 0, RULE_go);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			ruta=val;
			State = 25; inicio();
			State = 29;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 26; expr();
					}
					} 
				}
				State = 31;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			}
			State = 32; fin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InicioContext : ParserRuleContext {
		public ChecarEtiqContext checarEtiq() {
			return GetRuleContext<ChecarEtiqContext>(0);
		}
		public ITerminalNode INIT() { return GetToken(SICParser.INIT, 0); }
		public ChecarOpContext checarOp() {
			return GetRuleContext<ChecarOpContext>(0);
		}
		public ITerminalNode ENTER() { return GetToken(SICParser.ENTER, 0); }
		public InicioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inicio; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterInicio(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitInicio(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInicio(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InicioContext inicio() {
		InicioContext _localctx = new InicioContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_inicio);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34; checarEtiq();
			State = 35; Match(INIT);
			State = 36; checarOp();
			State = 37; Match(ENTER);
			i++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FinContext : ParserRuleContext {
		public ChecarEtiqContext checarEtiq() {
			return GetRuleContext<ChecarEtiqContext>(0);
		}
		public ITerminalNode ACABA() { return GetToken(SICParser.ACABA, 0); }
		public ChecarOpContext checarOp() {
			return GetRuleContext<ChecarOpContext>(0);
		}
		public ITerminalNode ENTER() { return GetToken(SICParser.ENTER, 0); }
		public FinContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fin; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterFin(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitFin(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFin(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FinContext fin() {
		FinContext _localctx = new FinContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_fin);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; checarEtiq();
			State = 41; Match(ACABA);
			State = 42; checarOp();
			State = 43; Match(ENTER);
			i++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ChecarEtiqContext checarEtiq() {
			return GetRuleContext<ChecarEtiqContext>(0);
		}
		public ChecarInstruContext checarInstru() {
			return GetRuleContext<ChecarInstruContext>(0);
		}
		public ChecarOpContext checarOp() {
			return GetRuleContext<ChecarOpContext>(0);
		}
		public ITerminalNode ENTER() { return GetToken(SICParser.ENTER, 0); }
		public ChecarRsubContext checarRsub() {
			return GetRuleContext<ChecarRsubContext>(0);
		}
		public ChecarDirecContext checarDirec() {
			return GetRuleContext<ChecarDirecContext>(0);
		}
		public ChecarByteContext checarByte() {
			return GetRuleContext<ChecarByteContext>(0);
		}
		public ChecarOpbyteContext checarOpbyte() {
			return GetRuleContext<ChecarOpbyteContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_expr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				State = 46; checarEtiq();
				State = 47; checarInstru();
				State = 48; checarOp();
				State = 49; Match(ENTER);
				}
				break;

			case 2:
				{
				State = 51; checarEtiq();
				State = 52; checarRsub();
				State = 53; Match(ENTER);
				}
				break;

			case 3:
				{
				State = 55; checarEtiq();
				State = 56; checarDirec();
				State = 57; checarOp();
				State = 58; Match(ENTER);
				}
				break;

			case 4:
				{
				State = 60; checarEtiq();
				State = 61; checarByte();
				State = 62; checarOpbyte();
				State = 63; Match(ENTER);
				}
				break;
			}
			i++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChecarOpbyteContext : ParserRuleContext {
		public ITerminalNode OPERANDBYTE() { return GetToken(SICParser.OPERANDBYTE, 0); }
		public ChecarOpbyteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_checarOpbyte; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterChecarOpbyte(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitChecarOpbyte(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChecarOpbyte(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChecarOpbyteContext checarOpbyte() {
		ChecarOpbyteContext _localctx = new ChecarOpbyteContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_checarOpbyte);
		int _la;
		try {
			State = 72;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INIT:
			case ACABA:
			case DIRBYTE:
			case DIRECTIVA:
			case EXEP:
			case INSTRUCCION:
			case OPERANDO:
			case ETIQUETA:
			case ENTER:
			case QUOTE:
			case WS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 69;
				_la = _input.La(1);
				if ( _la <= 0 || (_la==OPERANDBYTE) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				using (System.IO.StreamWriter file = new System.IO.StreamWriter(@ruta, true)){ file.WriteLine("Error en la linea: " + i);}
				}
				break;
			case OPERANDBYTE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 71; Match(OPERANDBYTE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChecarByteContext : ParserRuleContext {
		public ITerminalNode DIRBYTE() { return GetToken(SICParser.DIRBYTE, 0); }
		public ChecarByteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_checarByte; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterChecarByte(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitChecarByte(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChecarByte(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChecarByteContext checarByte() {
		ChecarByteContext _localctx = new ChecarByteContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_checarByte);
		int _la;
		try {
			State = 77;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INIT:
			case ACABA:
			case OPERANDBYTE:
			case DIRECTIVA:
			case EXEP:
			case INSTRUCCION:
			case OPERANDO:
			case ETIQUETA:
			case ENTER:
			case QUOTE:
			case WS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				_la = _input.La(1);
				if ( _la <= 0 || (_la==DIRBYTE) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				using (System.IO.StreamWriter file = new System.IO.StreamWriter(@ruta, true)){ file.WriteLine("Error en la linea: " + i);}
				}
				break;
			case DIRBYTE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 76; Match(DIRBYTE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChecarRsubContext : ParserRuleContext {
		public ITerminalNode EXEP() { return GetToken(SICParser.EXEP, 0); }
		public ChecarRsubContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_checarRsub; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterChecarRsub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitChecarRsub(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChecarRsub(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChecarRsubContext checarRsub() {
		ChecarRsubContext _localctx = new ChecarRsubContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_checarRsub);
		int _la;
		try {
			State = 82;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INIT:
			case ACABA:
			case DIRBYTE:
			case OPERANDBYTE:
			case DIRECTIVA:
			case INSTRUCCION:
			case OPERANDO:
			case ETIQUETA:
			case ENTER:
			case QUOTE:
			case WS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 79;
				_la = _input.La(1);
				if ( _la <= 0 || (_la==EXEP) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				using (System.IO.StreamWriter file = new System.IO.StreamWriter(@ruta, true)){ file.WriteLine("Error en la linea: " + i);}
				}
				break;
			case EXEP:
				EnterOuterAlt(_localctx, 2);
				{
				State = 81; Match(EXEP);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChecarOpContext : ParserRuleContext {
		public ITerminalNode OPERANDO() { return GetToken(SICParser.OPERANDO, 0); }
		public ChecarEtiqContext checarEtiq() {
			return GetRuleContext<ChecarEtiqContext>(0);
		}
		public ChecarOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_checarOp; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterChecarOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitChecarOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChecarOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChecarOpContext checarOp() {
		ChecarOpContext _localctx = new ChecarOpContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_checarOp);
		int _la;
		try {
			State = 88;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84;
				_la = _input.La(1);
				if ( _la <= 0 || (_la==OPERANDO) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				using (System.IO.StreamWriter file = new System.IO.StreamWriter(@ruta, true)){ file.WriteLine("Error en la linea: " + i);}
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 86; Match(OPERANDO);
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 87; checarEtiq();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChecarDirecContext : ParserRuleContext {
		public ITerminalNode DIRECTIVA() { return GetToken(SICParser.DIRECTIVA, 0); }
		public ChecarDirecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_checarDirec; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterChecarDirec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitChecarDirec(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChecarDirec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChecarDirecContext checarDirec() {
		ChecarDirecContext _localctx = new ChecarDirecContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_checarDirec);
		int _la;
		try {
			State = 93;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INIT:
			case ACABA:
			case DIRBYTE:
			case OPERANDBYTE:
			case EXEP:
			case INSTRUCCION:
			case OPERANDO:
			case ETIQUETA:
			case ENTER:
			case QUOTE:
			case WS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 90;
				_la = _input.La(1);
				if ( _la <= 0 || (_la==DIRECTIVA) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				using (System.IO.StreamWriter file = new System.IO.StreamWriter(@ruta, true)){ file.WriteLine("Error en la linea: " + i);}
				}
				break;
			case DIRECTIVA:
				EnterOuterAlt(_localctx, 2);
				{
				State = 92; Match(DIRECTIVA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChecarEtiqContext : ParserRuleContext {
		public ITerminalNode ETIQUETA() { return GetToken(SICParser.ETIQUETA, 0); }
		public ChecarEtiqContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_checarEtiq; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterChecarEtiq(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitChecarEtiq(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChecarEtiq(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChecarEtiqContext checarEtiq() {
		ChecarEtiqContext _localctx = new ChecarEtiqContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_checarEtiq);
		int _la;
		try {
			State = 98;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INIT:
			case ACABA:
			case DIRBYTE:
			case OPERANDBYTE:
			case DIRECTIVA:
			case EXEP:
			case INSTRUCCION:
			case OPERANDO:
			case ENTER:
			case QUOTE:
			case WS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 95;
				_la = _input.La(1);
				if ( _la <= 0 || (_la==ETIQUETA) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				using (System.IO.StreamWriter file = new System.IO.StreamWriter(@ruta, true)){ file.WriteLine("Error en la linea: " + i);}
				}
				break;
			case ETIQUETA:
				EnterOuterAlt(_localctx, 2);
				{
				State = 97; Match(ETIQUETA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChecarInstruContext : ParserRuleContext {
		public ChecarDirecContext checarDirec() {
			return GetRuleContext<ChecarDirecContext>(0);
		}
		public ITerminalNode INSTRUCCION() { return GetToken(SICParser.INSTRUCCION, 0); }
		public ChecarInstruContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_checarInstru; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterChecarInstru(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitChecarInstru(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChecarInstru(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChecarInstruContext checarInstru() {
		ChecarInstruContext _localctx = new ChecarInstruContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_checarInstru);
		int _la;
		try {
			State = 103;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INIT:
			case ACABA:
			case DIRBYTE:
			case OPERANDBYTE:
			case DIRECTIVA:
			case EXEP:
			case OPERANDO:
			case ETIQUETA:
			case ENTER:
			case QUOTE:
			case WS:
				EnterOuterAlt(_localctx, 1);
				{
				State = 100;
				_la = _input.La(1);
				if ( _la <= 0 || (_la==INSTRUCCION) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				State = 101; checarDirec();
				}
				break;
			case INSTRUCCION:
				EnterOuterAlt(_localctx, 2);
				{
				State = 102; Match(INSTRUCCION);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CompileUnitContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SICParser.Eof, 0); }
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICListener typedListener = listener as ISICListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICVisitor<TResult> typedVisitor = visitor as ISICVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_compileUnit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; expr();
			State = 106; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace Practica02
